--- a/AWLiveKit.xcodeproj/xcshareddata/xcschemes/AWLiveKitFramework.xcscheme
+++ b/AWLiveKit.xcodeproj/xcshareddata/xcschemes/AWLiveKitFramework.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "0730"
+   LastUpgradeVersion = "0820"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -15,8 +15,8 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "68348FF71D58692E00C2A72E"
-               BuildableName = "AWLiveKit.app"
-               BlueprintName = "AWLiveKit"
+               BuildableName = "AWLiveKitDemo.app"
+               BlueprintName = "AWLiveKitDemo"
                ReferencedContainer = "container:AWLiveKit.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -29,15 +29,6 @@
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
       </Testables>
-      <MacroExpansion>
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "68348FF71D58692E00C2A72E"
-            BuildableName = "AWLiveKit.app"
-            BlueprintName = "AWLiveKit"
-            ReferencedContainer = "container:AWLiveKit.xcodeproj">
-         </BuildableReference>
-      </MacroExpansion>
       <AdditionalOptions>
       </AdditionalOptions>
    </TestAction>
@@ -51,16 +42,15 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
-      <BuildableProductRunnable
-         runnableDebuggingMode = "0">
+      <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "68348FF71D58692E00C2A72E"
-            BuildableName = "AWLiveKit.app"
-            BlueprintName = "AWLiveKit"
+            BuildableName = "AWLiveKitDemo.app"
+            BlueprintName = "AWLiveKitDemo"
             ReferencedContainer = "container:AWLiveKit.xcodeproj">
          </BuildableReference>
-      </BuildableProductRunnable>
+      </MacroExpansion>
       <AdditionalOptions>
       </AdditionalOptions>
    </LaunchAction>
@@ -70,16 +60,15 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
-      <BuildableProductRunnable
-         runnableDebuggingMode = "0">
+      <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "68348FF71D58692E00C2A72E"
-            BuildableName = "AWLiveKit.app"
-            BlueprintName = "AWLiveKit"
+            BuildableName = "AWLiveKitDemo.app"
+            BlueprintName = "AWLiveKitDemo"
             ReferencedContainer = "container:AWLiveKit.xcodeproj">
          </BuildableReference>
-      </BuildableProductRunnable>
+      </MacroExpansion>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
