remove gpuimage dependency in framework

--- a/AWLiveKit.xcodeproj/xcshareddata/xcschemes/AWLiveKit.xcscheme
+++ b/AWLiveKit.xcodeproj/xcshareddata/xcschemes/AWLiveKit.xcscheme
@@ -54,6 +54,11 @@
          </BuildableReference>
       </MacroExpansion>
       <AdditionalOptions>
+         <AdditionalOption
+            key = "DYLD_PRINT_LIBRARIES"
+            value = ""
+            isEnabled = "YES">
+         </AdditionalOption>
       </AdditionalOptions>
    </LaunchAction>
    <ProfileAction
